--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         ]
     },
     "dependencies": {
-        "next": "14.2.23",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.3.1",
+        "@mui/material": "^6.3.1",
+        "next": "^14.2.23",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.5.0",
