--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
             }
         ],
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*", "./src/assets", "./src/utils"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.cjs"],
