--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.5.0",
         "react-hook-form": "^7.54.2",
+        "react-quill": "^2.0.0",
         "react-resizable": "^3.0.5",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
