--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@hookform/resolvers": "^3.10.0",
-        "@mui/icons-material": "^6.3.1",
+        "@mui/icons-material": "^6.4.0",
         "@mui/material": "^6.4.0",
+        "@mui/x-date-pickers": "^7.23.6",
         "next": "^14.2.23",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -32,6 +33,7 @@
         "react-hook-form": "^7.54.2",
         "react-quill": "^2.0.0",
         "react-resizable": "^3.0.5",
+        "uuid": "^11.0.5",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
     },
