feat: create DetailCard component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
             }
         ],
         "paths": {
-            "@/*": ["./src/*", "./src/assets", "./src/utils"]
+            "@/*": ["./src/*", "./src/assets", "./src/utils", "./src/app/_components"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.cjs"],
