--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/icons-material": "^6.4.0",
         "@mui/material": "^6.4.0",
         "@mui/x-date-pickers": "^7.23.6",
+        "immer": "^10.1.1",
         "next": "^14.2.23",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -41,15 +42,15 @@
         "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
         "@eslint/eslintrc": "^3",
-        "@eslint/js": "^9.17.0",
-        "@next/eslint-plugin-next": "^15.1.4",
+        "@eslint/js": "^9.18.0",
+        "@next/eslint-plugin-next": "^15.1.6",
         "@trivago/prettier-plugin-sort-imports": "github:trivago/prettier-plugin-sort-imports",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@types/react-grid-layout": "^1.3.5",
         "autoprefixer": "^10.4.20",
-        "eslint": "^9.17.0",
+        "eslint": "^9.18.0",
         "eslint-config-next": "^15.1.4",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
