--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-hook-form": "^7.54.2",
         "react-quill": "^2.0.0",
         "react-resizable": "^3.0.5",
+        "react-to-print": "^3.0.4",
         "uuid": "^11.0.5",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
