--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "my-project",
+    "homepage": "https://salimidev.github.io/resume-builder/",
+    "name": "resume-builder",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -8,7 +9,9 @@
         "start": "next start",
         "lint": "next lint",
         "format": "prettier --write .",
-        "prepare": "husky"
+        "prepare": "husky",
+        "predeploy": "npm run build && npm run export",
+        "deploy": "gh-pages -d out"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,json,css,md}": [
@@ -60,6 +63,7 @@
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-tailwindcss": "^3.17.5",
+        "gh-pages": "^6.3.0",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.3.0",
