--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-quill": "^2.0.0",
         "react-resizable": "^3.0.5",
         "react-to-print": "^3.0.4",
+        "sharp": "^0.33.5",
         "uuid": "^11.0.5",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
