--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ name: Deploy Next.js site to Pages
 on:
     # Runs on pushes targeting the default branch
     push:
-        branches: ['main']
+        branches: [$default-branch]
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
@@ -22,7 +22,7 @@ permissions:
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
     group: 'pages'
-    cancel-in-progress: true
+    cancel-in-progress: false
 
 jobs:
     # Build job
@@ -30,7 +30,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
             - name: Detect package manager
               id: detect-package-manager
               run: |
@@ -49,12 +49,12 @@ jobs:
                     exit 1
                   fi
             - name: Setup Node
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v4
               with:
-                  node-version: 'v20.14.0'
+                  node-version: '20'
                   cache: ${{ steps.detect-package-manager.outputs.manager }}
             - name: Setup Pages
-              uses: actions/configure-pages@v2
+              uses: actions/configure-pages@v5
               with:
                   # Automatically inject basePath in your Next.js configuration file and disable
                   # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
@@ -62,7 +62,7 @@ jobs:
                   # You may remove this line if you want to manage the configuration yourself.
                   static_site_generator: next
             - name: Restore cache
-              uses: actions/cache@v2
+              uses: actions/cache@v4
               with:
                   path: |
                       .next/cache
@@ -76,7 +76,7 @@ jobs:
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
             - name: Upload artifact
-              uses: actions/upload-pages-artifact@v1
+              uses: actions/upload-pages-artifact@v3
               with:
                   path: ./out
 
@@ -90,4 +90,4 @@ jobs:
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v2
+              uses: actions/deploy-pages@v4
