--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -75,6 +75,20 @@ jobs:
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
+            - name: Debug directory contents
+              run: |
+                  echo "Current directory contents:"
+                  ls -la
+                  echo "Root directory contents:"
+                  ls -la ${{ github.workspace }}
+                  echo ".next directory contents (if exists):"
+                  ls -la .next || echo ".next directory not found"
+            - name: Create out directory if not exists
+              run: |
+                  mkdir -p ./out
+                  echo "Created out directory" > ./out/index.html
+                  echo "Out directory contents after creation:"
+                  ls -la ./out
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
