--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ permissions:
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
     group: 'pages'
-    cancel-in-progress: false
+    cancel-in-progress: true
 
 jobs:
     # Build job
@@ -30,7 +30,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v4
+              uses: actions/checkout@v3
             - name: Detect package manager
               id: detect-package-manager
               run: |
@@ -49,12 +49,12 @@ jobs:
                     exit 1
                   fi
             - name: Setup Node
-              uses: actions/setup-node@v4
+              uses: actions/setup-node@v3
               with:
-                  node-version: '20'
+                  node-version: 'v20.14.0'
                   cache: ${{ steps.detect-package-manager.outputs.manager }}
             - name: Setup Pages
-              uses: actions/configure-pages@v5
+              uses: actions/configure-pages@v3
               with:
                   # Automatically inject basePath in your Next.js configuration file and disable
                   # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
@@ -62,7 +62,7 @@ jobs:
                   # You may remove this line if you want to manage the configuration yourself.
                   static_site_generator: next
             - name: Restore cache
-              uses: actions/cache@v4
+              uses: actions/cache@v3
               with:
                   path: |
                       .next/cache
@@ -75,24 +75,10 @@ jobs:
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
-            - name: Debug directory contents
-              run: |
-                  echo "Current directory contents:"
-                  ls -la
-                  echo "Root directory contents:"
-                  ls -la ${{ github.workspace }}
-                  echo ".next directory contents (if exists):"
-                  ls -la .next || echo ".next directory not found"
-            - name: Create out directory if not exists
-              run: |
-                  mkdir -p ./out
-                  echo "Created out directory" > ./out/index.html
-                  echo "Out directory contents after creation:"
-                  ls -la ./out
             - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
+              uses: actions/upload-pages-artifact@v1
               with:
-                  path: ./.next
+                  path: ./out
 
     # Deployment job
     deploy:
@@ -104,4 +90,4 @@ jobs:
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v4
+              uses: actions/deploy-pages@v2
